--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.body %></p>
 <p><%= @post.category %></p>
-<%= link_to '編集する', post_path(post.id), method: :edit%>
+<%= link_to '編集する', edit_post_path(@post) %>
+<%= link_to '削除する', post_path(@post), method: :delete %>
