--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,16 +1,2 @@
 <h1>編集画面</h1>
-<%= form_for @post do |f| %>
-<p>
-	Title:<%= f.text_field :title %>
-</p>
-<p>
-	Category:<%= f.text_field :category %>
-</p>
-<p>
-	Body:<%= f.text_field :body %>
-</p>
-<p>
-	<%= f.submit '保存する'%>
-</p>
-
-<% end %>
+<%= render 'form' %>
