--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,23 @@
+<div class="row">
+<div class="col-sm-12 col-md-12">
+<div class="col-sm-8 col-md-8">
 <h1>ブログ記事一覧</h1>
 <ul>
 <% @posts.each do |post|%>
 	<li>
-		<%= link_to post.title, post_path(post.id)%>
-		<%= link_to '削除する', post_path(post.id), method: :delete%>
+		<h2><%= link_to post.title, post_path(post.id) %></h2>
+		<p>
+			<%= post.body%>
+		</p>
+		<%= link_to '編集する', edit_post_path(post.id) , class:'btn btn-default'%>
+		<%= link_to '削除する', post_path(post.id), method: :delete, class: 'btn btn-default'%>
 	</li>
 <% end %>
 </ul>
-<%= link_to '新しいブログを書く', new_post_path %>
+<%= link_to '新しいブログを書く', new_post_path, class: 'btn btn-default btn-block' %>
+</div>
+<div class="col-sm-4 col-md-4">
+	kokokokokokokok
+</div>
+</div>
+</div>
